--- a/client/webapp/public/index.html
+++ b/client/webapp/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
     <title>go-BenX</title>
   </head>
 
   <body>
-    <p><strong>Benefit Administration Console</strong></p>
-    <p><em>Actions</em></p>
+    <h1>Benefit Administration Console</h1>
+    <h2>Actions</h2>
     <p>
       <a href="/job">Start Annual Enrollment Job</a>
     </p>
@@ -17,7 +18,7 @@
     <p>
       <a href="/event">Publish Person Enrollment Event</a>
     </p>
-    <p><em>Person Inquiries</em></p>
+    <h2>Person Inquires</h2>
     <p>
       <a href="/person">Find Person</a>
     </p>
