--- a/client/webapp/public/personIdForm.html
+++ b/client/webapp/public/personIdForm.html
@@ -1,6 +1,16 @@
-<h1>Person</h1>
-<form method="POST">
-  <label>Person External Id: </label>
-  <input type="text" name="personId" value="010-10-0010" /><br />
-  <input type="submit" />
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Person Select Form</title>
+  </head>
+  <body>
+    <h1>Person</h1>
+    <form method="POST">
+      <label>Person External Id: </label>
+      <input type="text" name="personId" value="010-10-0010" /><br />
+      <input type="submit" />
+    </form>
+  </body>
+</html>
